# docs/swagger.json
@@ -7,7 +7,32 @@
         "version": "1.1"
     },
     "paths": {
-        "/api/v1/casbin/policies": {
+        "/api/v1/example/rate-limit": {
+            "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "description": "用户访问速率限制",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "example"
+                ],
+                "summary": "用户访问速率限制",
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/app.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/perm/policies": {
             "get": {
                 "security": [
                     {
@@ -43,7 +68,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/model.CasbinPolicy"
+                                                "$ref": "#/definitions/model.PermPolicy"
                                             }
                                         }
                                     }
@@ -77,7 +102,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.CreateCasbinPolicyRequest"
+                            "$ref": "#/definitions/service.CreatePermPolicyRequest"
                         }
                     }
                 ],
@@ -111,7 +136,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/service.DeleteCasbinPolicyRequest"
+                            "$ref": "#/definitions/service.DeletePermPolicyRequest"
                         }
                     }
                 ],
@@ -125,7 +150,7 @@
                 }
             }
         },
-        "/api/v1/casbin/policies/reload": {
+        "/api/v1/perm/policies/reload": {
             "get": {
                 "security": [
                     {
@@ -143,31 +168,6 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/app.Result"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/v1/example/rate-limit": {
-            "get": {
-                "security": [
-                    {
-                        "JWT": []
-                    }
-                ],
-                "description": "用户访问速率限制",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "用户访问速率限制",
-                "responses": {
-                    "200": {
-                        "description": "成功",
                         "schema": {
                             "$ref": "#/definitions/app.Result"
                         }
@@ -798,7 +798,7 @@
                 }
             }
         },
-        "model.CasbinPolicy": {
+        "model.PermPolicy": {
             "type": "object",
             "properties": {
                 "method": {
@@ -862,7 +862,7 @@
                 }
             }
         },
-        "service.CreateCasbinPolicyRequest": {
+        "service.CreatePermPolicyRequest": {
             "type": "object",
             "required": [
                 "method",
@@ -927,7 +927,7 @@
                 }
             }
         },
-        "service.DeleteCasbinPolicyRequest": {
+        "service.DeletePermPolicyRequest": {
             "type": "object",
             "required": [
                 "method",
